--- a/index.html
+++ b/index.html
@@ -1,22 +1,14 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>小浦 善輝のポートフォリオ</title>
-    <link rel="stylesheet" href="style.css">
-</head>
 <body>
     <header>
-        <h1>小浦　善輝</h1>
-        <p class="role">Java Webアプリケーション開発者志望</p>
-        <p class="tagline">このポートフォリオでは、ブラックジャックゲームの開発を通して培ったWebアプリケーション開発の基礎と、現在のスキルをご紹介します。</p>
+        <h1>小浦 善輝</h1>
+        <p class="role">Java Webアプリケーション開発者を目指しています</p>
+        <p class="tagline">このポートフォリオでは、私が卒業制作で作ったブラックジャックゲームを通して学んだWebアプリケーション開発の基礎と、今のスキルをご紹介します。</p>
 
         <nav>
             <ul>
                 <li><a href="#project">プロジェクト</a></li>
                 <li><a href="#skills">スキル</a></li>
-                <li><a href="#contact">ご連絡先</a></li>
+                <li><a href="#contact">連絡先</a></li>
             </ul>
         </nav>
     </header>
@@ -25,38 +17,38 @@
         <section id="project">
             <h2>プロジェクト: ブラックジャックゲーム</h2>
 
-            <h3>概要</h3>
-            <p>職業訓練校の卒業制作プロジェクトとして開発した、シンプルながらも基本的な機能が揃ったブラックジャックゲームです。4つのゲームが遊べるアプリケーションの一部として作成しました。</p>
+            <h3>どんなゲーム？</h3>
+            <p>職業訓練校の卒業制作として作った、シンプルなブラックジャックゲームです。4つのゲームが遊べる大きなアプリケーションの一部として開発しました。</p>
 
-            <h3>機能</h3>
+            <h3>できること</h3>
             <ul>
-                <li>ディーラーとプレイヤーの対戦</li>
-                <li>ベット機能</li>
-                <li>履歴表示</li>
-                <li>ヒット（カードを引く）</li>
-                <li>スタンド（勝負する）</li>
+                <li>コンピューター（ディーラー）とプレイヤーが対戦できます</li>
+                <li>ゲーム内のお金を賭ける機能があります</li>
+                <li>過去のゲーム結果を見ることができます</li>
+                <li>カードをもう1枚引く「ヒット」</li>
+                <li>今の手札で勝負する「スタンド」</li>
             </ul>
 
-            <h3>使用技術</h3>
+            <h3>使った技術</h3>
             <ul>
-                <li>Java (バックエンド、ゲームロジック、サーブレット)</li>
-                <li>JSP (フロントエンド、動的なWebページの生成)</li>
-                <li>HTML (フロントエンド、ページ構造)</li>
-                <li>CSS (フロントエンド、デザイン・レイアウト)</li>
-                <li>Apache Tomcat (Webサーバー)</li>
-                <li>Eclipse (IDE)</li>
+                <li>**Java**: ゲームの裏側（ルール計算など）を作りました</li>
+                <li>**JSP**: Webページにゲームの情報を表示するために使いました</li>
+                <li>**HTML**: ページの骨組みを作りました</li>
+                <li>**CSS**: ページのデザインを整えました</li>
+                <li>**Apache Tomcat**: 作ったWebアプリケーションを動かすためのサーバーです</li>
+                <li>**Eclipse**: プログラムを書くためのソフト（開発環境）です</li>
             </ul>
 
-            <h3>このプロジェクトで発揮した能力と得られた経験</h3>
+            <h3>このプロジェクトで学んだこと・できるようになったこと</h3>
             <ul>
-                <li>JavaとWeb技術（JSP/Servlet）を用いたWebアプリケーションの構築プロセスを一通り経験し、企画から設計、実装、テストまでの一連のWebアプリケーション開発フローを理解し、実行することができます。</li>
-                <li>ブラックジャックの複雑なゲームロジック（カード配布、手札計算、勝敗判定など）をJavaで実装することで、複雑な要件を論理的に分解し、堅牢で効率的なビジネスロジックを設計・実装する能力を培いました。</li>
-                <li>ユーザーのゲーム状態や履歴、そしてアプリ全体で共有される所持コインをセッション・アプリケーションスコープで管理することで、Webアプリケーションにおける状態管理の重要性を理解し、状況に応じた適切なデータ保持・連携の実装が可能です。</li>
-                <li>HTMLとCSSを使い、ユーザーが利用しやすいUIデザインと、視覚的に魅力的なページレイアウトを実現しました。ユーザー体験を考慮したフロントエンドの設計・実装に貢献できます。</li>
-                <li>MVCモデルを意識してコードを構成し、役割分担されたコードの保守性や再利用性を実践しました。これにより、可読性が高く、拡張性のあるコードを書くことを意識しており、チーム開発においても品質向上に貢献できます。</li>
+                <li>JavaとWeb技術（JSP/Servlet）を使って、Webアプリケーションを企画から設計、開発、テストまで一通り作れるようになりました。</li>
+                <li>ブラックジャックの複雑なルール（カードの配り方、点数計算、勝ち負けの判定など）をJavaでプログラムすることで、難しい問題を順序立てて解決する力が身につきました。</li>
+                <li>Webアプリケーションでユーザーのお金やゲームの履歴を管理する方法（セッション・アプリケーションスコープ）を学び、状況に合わせてデータを適切に扱うことができるようになりました。</li>
+                <li>HTMLとCSSを使って、使いやすくて見た目も良い画面を作る経験を積みました。ユーザーが快適に使えるデザインを考えながら開発できます。</li>
+                <li>プログラムの役割を分けて書く「MVCモデル」を意識して開発することで、後から修正しやすく、他の人が見てもわかりやすいコードを書くことを心がけました。チームで開発する際にも、質の高いコードを書くことで貢献できます。</li>
             </ul>
 
-			<h4>動作イメージ</h4>
+			<h4>動いている様子（スクリーンショット）</h4>
 			<div class="screenshots">
                 <img src="images/スクリーンショット 2025-06-12 192541.png" alt="ブラックジャックゲーム開始画面">
                 <img src="images/スクリーンショット 2025-06-12 192624.png" alt="ブラックジャックゲームプレイ中画面">
@@ -67,42 +59,42 @@
         </section>
 
 		<section id="skills">
-		            <h2>スキル</h2>
+		            <h2>私のスキル</h2>
 		            <ul>
 		                <li>
-		                    Java: <br>
-		                    職業訓練校でのメイン言語として、ブラックジャックゲームの複雑なゲームロジックやバックエンド処理の設計・実装を担当しました。オブジェクト指向プログラミングに基づいた堅牢なシステム構築が可能です。
+		                    **Java**: <br>
+		                    職業訓練校で一番学んだ言語です。ブラックジャックゲームの複雑なルールや裏側の処理を作ることで、しっかりとしたシステムを組み立てる力が身につきました。
 		                </li>
 		                <li>
-		                    HTML: <br>
-		                    ポートフォリオサイトおよびブラックジャックゲームのWebページ構造の設計とマークアップを遂行。セマンティックなHTML記述により、可読性と保守性の高いコードを作成できます。
+		                    **HTML**: <br>
+		                    このポートフォリオサイトやブラックジャックゲームのWebページの骨組みを作りました。きれいで分かりやすいHTMLを書くことができます。
 		                </li>
 		                <li>
-		                    CSS: <br>
-		                    ポートフォリオサイトおよびゲームのレイアウトとデザイン実装を担当。Flexboxを活用した柔軟な配置や、モバイル環境にも対応するレスポンシブデザインの実装経験があります。
+		                    **CSS**: <br>
+		                    ポートフォリオサイトやゲームの見た目をデザインしました。画面のレイアウトを自由に調整したり、スマホでも見やすいように設定したりする経験があります。
 		                </li>
 		                <li>
-		                    JSP: <br>
-		                    Java Servletと連携し、動的なWebページの生成とデータ表示に利用。バックエンドからの情報を効果的にユーザーインターフェースに反映させるスキルがあります。
+		                    **JSP**: <br>
+		                    Javaのプログラムと連携して、Webページにゲームの状況や結果を動的に表示するために使いました。
 		                </li>
 		                <li>
-		                    Servlet: <br>
-		                    Webリクエストの処理、ビジネスロジックの呼び出し、JSPへのフォワードなど、Webアプリケーションの主要なコントローラ部分の実装を経験。セッション・アプリケーションスコープを用いた状態管理も適切に行えます。
+		                    **Servlet**: <br>
+		                    Webサイトへのアクセスを受け付けたり、ゲームのルールを動かしたり、JSPに情報を渡したりと、Webアプリケーションの司令塔のような部分を作る経験をしました。ユーザーの情報やゲームの状態を適切に管理できます。
 		                </li>
 		                <li>
-		                    Apache Tomcat: <br>
-		                    開発したWebアプリケーションのデプロイと基本的なサーバー環境の構築・運用を経験。開発したアプリケーションを実際に動作させるための環境構築が可能です。
+		                    **Apache Tomcat**: <br>
+		                    作ったWebアプリケーションを動かすためのサーバーの設定や、アプリケーションを公開する経験をしました。自分で作ったものを動かすための環境を整えることができます。
 		                </li>
 		                <li>
-		                    Eclipse: <br>
-		                    開発IDEとして日常的に利用。効率的なコーディング、デバッグ、Git連携によるバージョン管理を実践しており、開発フローに沿った作業をスムーズに行えます。
+		                    **Eclipse**: <br>
+		                    普段から使っているプログラム開発のソフトです。効率よくコードを書いたり、間違いを探したり、Gitを使ってバージョン管理をしたりと、スムーズに開発を進めることができます。
 		                </li>
 		            </ul>
 
-		            <h3>今後学習したい技術</h3>
+		            <h3>これから学びたいこと</h3>
 		            <ul>
-		                <li>RDBMS (例: MySQL/PostgreSQL): データベース設計・操作の知識を深め、よりデータ駆動型のアプリケーション開発に貢献するため、SQLの学習と実践を進めています。</li>
-		                <li>Git / GitHub: バージョン管理システムをチーム開発で活用し、より効率的で協調的な開発フローを実践していきたいです。特にPull RequestやIssue管理についても習熟を目指しています。</li>
+		                <li>**RDBMS (例: MySQL/PostgreSQL)**: データベースの設計や操作についてもっと学び、データを使うアプリケーション開発に役立てたいです。今、SQLというデータベースを操作する言語を勉強しています。</li>
+		                <li>**Git / GitHub**: チームで開発する際に、GitやGitHubをより上手に使って、効率よく協力しながら開発を進めたいです。特に、Pull Request（コードの提案）やIssue管理（課題管理）についても使いこなせるようになりたいと思っています。</li>
 		            </ul>
 		        </section>
     </main>
@@ -116,4 +108,3 @@
 	        <p class="copyright">&copy; 2025 小浦 善輝. All rights reserved.</p>
 	    </footer>
 </body>
-</html>
