--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>小浦 善輝のポートフォリオ</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
     <header>
         <h1>小浦 善輝</h1>
@@ -48,8 +56,8 @@
                 <li>プログラムの役割を分けて書く「MVCモデル」を意識して開発することで、後から修正しやすく、他の人が見てもわかりやすいコードを書くことを心がけました。チームで開発する際にも、質の高いコードを書くことで貢献できます。</li>
             </ul>
 
-			<h4>動いている様子（スクリーンショット）</h4>
-			<div class="screenshots">
+            <h4>動いている様子（スクリーンショット）</h4>
+            <div class="screenshots">
                 <img src="images/スクリーンショット 2025-06-12 192541.png" alt="ブラックジャックゲーム開始画面">
                 <img src="images/スクリーンショット 2025-06-12 192624.png" alt="ブラックジャックゲームプレイ中画面">
                 <img src="images/スクリーンショット 2025-06-12 192645.png" alt="ブラックジャックゲーム結果画面">
@@ -58,53 +66,54 @@
 
         </section>
 
-		<section id="skills">
-		            <h2>私のスキル</h2>
-		            <ul>
-		                <li>
-		                    **Java**: <br>
-		                    職業訓練校で一番学んだ言語です。ブラックジャックゲームの複雑なルールや裏側の処理を作ることで、しっかりとしたシステムを組み立てる力が身につきました。
-		                </li>
-		                <li>
-		                    **HTML**: <br>
-		                    このポートフォリオサイトやブラックジャックゲームのWebページの骨組みを作りました。きれいで分かりやすいHTMLを書くことができます。
-		                </li>
-		                <li>
-		                    **CSS**: <br>
-		                    ポートフォリオサイトやゲームの見た目をデザインしました。画面のレイアウトを自由に調整したり、スマホでも見やすいように設定したりする経験があります。
-		                </li>
-		                <li>
-		                    **JSP**: <br>
-		                    Javaのプログラムと連携して、Webページにゲームの状況や結果を動的に表示するために使いました。
-		                </li>
-		                <li>
-		                    **Servlet**: <br>
-		                    Webサイトへのアクセスを受け付けたり、ゲームのルールを動かしたり、JSPに情報を渡したりと、Webアプリケーションの司令塔のような部分を作る経験をしました。ユーザーの情報やゲームの状態を適切に管理できます。
-		                </li>
-		                <li>
-		                    **Apache Tomcat**: <br>
-		                    作ったWebアプリケーションを動かすためのサーバーの設定や、アプリケーションを公開する経験をしました。自分で作ったものを動かすための環境を整えることができます。
-		                </li>
-		                <li>
-		                    **Eclipse**: <br>
-		                    普段から使っているプログラム開発のソフトです。効率よくコードを書いたり、間違いを探したり、Gitを使ってバージョン管理をしたりと、スムーズに開発を進めることができます。
-		                </li>
-		            </ul>
+        <section id="skills">
+            <h2>私のスキル</h2>
+            <ul>
+                <li>
+                    **Java**: <br>
+                    職業訓練校で一番学んだ言語です。ブラックジャックゲームの複雑なルールや裏側の処理を作ることで、しっかりとしたシステムを組み立てる力が身につきました。
+                </li>
+                <li>
+                    **HTML**: <br>
+                    このポートフォリオサイトやブラックジャックゲームのWebページの骨組みを作りました。きれいで分かりやすいHTMLを書くことができます。
+                </li>
+                <li>
+                    **CSS**: <br>
+                    ポートフォリオサイトやゲームの見た目をデザインしました。画面のレイアウトを自由に調整したり、スマホでも見やすいように設定したりする経験があります。
+                </li>
+                <li>
+                    **JSP**: <br>
+                    Javaのプログラムと連携して、Webページにゲームの状況や結果を動的に表示するために使いました。
+                </li>
+                <li>
+                    **Servlet**: <br>
+                    Webサイトへのアクセスを受け付けたり、ゲームのルールを動かしたり、JSPに情報を渡したりと、Webアプリケーションの司令塔のような部分を作る経験をしました。ユーザーの情報やゲームの状態を適切に管理できます。
+                </li>
+                <li>
+                    **Apache Tomcat**: <br>
+                    作ったWebアプリケーションを動かすためのサーバーの設定や、アプリケーションを公開する経験をしました。自分で作ったものを動かすための環境を整えることができます。
+                </li>
+                <li>
+                    **Eclipse**: <br>
+                    普段から使っているプログラム開発のソフトです。効率よくコードを書いたり、間違いを探したり、Gitを使ってバージョン管理をしたりと、スムーズに開発を進めることができます。
+                </li>
+            </ul>
 
-		            <h3>これから学びたいこと</h3>
-		            <ul>
-		                <li>**RDBMS (例: MySQL/PostgreSQL)**: データベースの設計や操作についてもっと学び、データを使うアプリケーション開発に役立てたいです。今、SQLというデータベースを操作する言語を勉強しています。</li>
-		                <li>**Git / GitHub**: チームで開発する際に、GitやGitHubをより上手に使って、効率よく協力しながら開発を進めたいです。特に、Pull Request（コードの提案）やIssue管理（課題管理）についても使いこなせるようになりたいと思っています。</li>
-		            </ul>
-		        </section>
+            <h3>これから学びたいこと</h3>
+            <ul>
+                <li>**RDBMS (例: MySQL/PostgreSQL)**: データベースの設計や操作についてもっと学び、データを使うアプリケーション開発に役立てたいです。今、SQLというデータベースを操作する言語を勉強しています。</li>
+                <li>**Git / GitHub**: チームで開発する際に、GitやGitHubをより上手に使って、効率よく協力しながら開発を進めたいです。特に、Pull Request（コードの提案）やIssue管理（課題管理）についても使いこなせるようになりたいと思っています。</li>
+            </ul>
+        </section>
     </main>
 
-	<footer>
-	        <section id="contact" style="background-color: transparent; box-shadow: none; padding: 0;">
-	            <h2>ご連絡先</h2>
-	            <p>ご連絡は、以下のメールアドレスまでお願いいたします。</p>
-	            <p>メールアドレス: kourayoshiki@gmail.com</p>
-	            </section>
-	        <p class="copyright">&copy; 2025 小浦 善輝. All rights reserved.</p>
-	    </footer>
+    <footer>
+        <section id="contact" style="background-color: transparent; box-shadow: none; padding: 0;">
+            <h2>ご連絡先</h2>
+            <p>ご連絡は、以下のメールアドレスまでお願いいたします。</p>
+            <p>メールアドレス: kourayoshiki@gmail.com</p>
+        </section>
+        <p class="copyright">&copy; 2025 小浦 善輝. All rights reserved.</p>
+    </footer>
 </body>
+</html>
