--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <footer>
         <section id="contact" style="background-color: transparent; box-shadow: none; padding: 0;">
-            <h2>ご連絡先</h2>
+            <h2>連絡先</h2>
             <p>ご連絡は、以下のメールアドレスまでお願いいたします。</p>
             <p>メールアドレス: kourayoshiki@gmail.com</p>
         </section>
